[tool.poetry]
name = "pytorch-unet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.2"
Pillow = "^7.1"
torchvision = "^0.6.0"
tqdm = "^4.45"
tensorboard = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
